# covid

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sources.txt
