[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Javi Molina <javi.ms10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^0.13.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
